--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "generate-preview": "node scripts/generate-preview.js"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-primitive": "^2.0.3",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-roving-focus": "^1.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
@@ -26,7 +29,7 @@
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
